# esa-urban-classification

./: .gitignore  .pre-commit-config.yaml  README.md  esa-uc.qgz  footprints.geojson  pyproject.toml
.dvc/: config
api/: secrets.py  sentinel_api.py
data/: .gitignore  amsterdam.dvc  athens.dvc  barcelona.dvc  berlin.dvc  budapest.dvc  den haag.dvc  helsinki.dvc  london.dvc  milan.dvc  paris.dvc  prague.dvc  rome.dvc  rotterdam.dvc  utrecht.dvc  vienna.dvc  warsaw.dvc  zurich.dvc
etl/: extract.py  load.py  transform.py
footprints/: amsterdam.geojson  athens.geojson  barcelona.geojson  berlin.geojson  budapest.geojson  denhaag.geojson  milan.geojson  paris.geojson  prague.geojson  rome.geojson  rotterdam.geojson  vienna.geojson  warsaw.geojson  zurich.geojson
scripts/: bb_to_geojson.py  convert_shp_files.py  inspect_geojson.py  run.py
tests/: test_extract.py  test_transform.py
utils/: env.py  secrets.py
