[tool.poetry]
name = "esa-urban-classification"
version = "0.1.0"
description = ""
authors = ["Mate Csornyei <mate@csornyei.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ipykernel = "^6.25.2"
geopandas = "^0.13.2"
rasterio = "^1.3.8"
pre-commit = "^3.4.0"
ruff = "^0.0.292"
black = "^23.9.1"
isort = "^5.12.0"
hvac = "^2.0.0"
sentinelhub = "^3.9.4"
dvc = "^3.30.3"
dvc-s3 = "^2.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
